fix navbar spacing and some responsiveness fixes

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,16 +1,3 @@
-/* Smartphones (portrait and landscape) ----------- */
-@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
-    .nav {
-        font-size: .8em;
-    }
-}
-@media only screen and (min-width: 640px) {
-    #social {
-        padding-left: 0;
-        padding-top: 1em;
-    }
-}
-
 /* Twitter Styling */
 #tweets > ul {
     list-style-type: none;
@@ -54,7 +41,6 @@ p.timePosted {
 .title-wrapper > .row {
     padding:0;
     margin:0 !important;
-    width: default;
 }
 html, body {
 	background: white url("../img/gray_jean.png") repeat;
@@ -71,18 +57,23 @@ h1, h2, h3, h4, h5, h6 {
 html {
        overflow-y: scroll;
 }
+.non-home-wrapper {
+    padding-left:10%;
+    width: 100%;
+    height:100%;
+}
 .title {
+    height: 40px;
 	padding-left:0 !important;
 	padding-right:0 !important;
-    float:right;
-    width: 22.5% !important;
+    width: 25% !important;
+    float: left;
 }
 #home-button {
     width:100%;
 }
 #home-button-div {
     width:10%;
-    width: -webkit-calc(100% - 90%);
     padding-left: 0 !important;
     padding-right: 0 !important;
 }
@@ -279,4 +270,21 @@ section {
 .page-title {
     margin-top: 0;
     margin-bottom:0 !important;
+}
+
+/* Smartphones (portrait and landscape) ----------- */
+@media only screen and (min-width : 320px) and (max-width : 480px) {
+    .nav {
+        font-size: .8em;
+    }
+    .title {
+        height: 33px;
+    }
+
+}
+@media only screen and (min-width: 640px) {
+    #social {
+        padding-left: 0;
+        padding-top: 1em;
+    }
 }
